# remindme

./: .gitignore  Dockerfile  README.md  compose.yml  config.yml  pyproject.toml  sqlc.yaml
.github/workflows/: build-docker.yml
assets/logo/: source.txt
db/: queries.sql  schema.sql
remindme/: __init__.py  __main__.py  component_handler.py  config.py  loader.py
remindme/db/: __init__.py  models.py  queries.py
remindme/extensions/: misc.py  reminders.py
remindme/extensions/reminders/: listreminders.py  remindme.py  tasks.py
remindme/interaction_handlers/: __init__.py  base.py  components.py  modals.py
remindme/utils/: components.py  constants.py  keys.py  modals.py  reminders.py
